fix gap category

--- a/app/assets/stylesheets/components/_category.scss
+++ b/app/assets/stylesheets/components/_category.scss
@@ -1,6 +1,6 @@
 .category {
   background: $colorPrimary;
-  padding: 18px 0;
+  padding: 12px 0;
 
   &__container {
     align-items: center;
